--- a/src/sass/_variabless.scss
+++ b/src/sass/_variabless.scss
@@ -1,5 +1,6 @@
 $amarillo: #ffe600;
 $grisIntermedio: #666666;
-$grisOscuro: #333333;
+$colorLetras: #333333;
 $grisClarito: #999999;
 $blanco: #eeeeee;
+$boton-compra: #3483fa;
