--- a/src/sass/partials/_cajaDeBusqueda.scss
+++ b/src/sass/partials/_cajaDeBusqueda.scss
@@ -1,21 +1,28 @@
 nav {
+  align-content: center;
   width: 100%;
   background-color: #ffe600;
   display: flex;
-  justify-content: center;
-  align-items: center;
-  .logo {
- 
-  }
+
   .contenedor-input {
+    padding-top: 5px;
+    padding-bottom: 5px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    .meli-logo {
+      margin-top: 5px;
+    }
+
     input:focus {
       outline: none;
     }
+
     input {
-      position: relative;
-      margin: 12px;
+      margin-left: 30px;
       margin-right: 0;
-      height: 40px;
+      height: 36px;
       width: 900px;
       font-size: 18px;
       border-style: hidden;
@@ -24,10 +31,8 @@ nav {
       padding-left: 18px;
     }
     .boton-busqueda {
-      position: absolute;
-      margin-top: 12px;
-      height: 40px;
-      width: 40px;
+      height: 36px;
+      width: 36px;
       border-top-right-radius: 4px;
       border-bottom-right-radius: 4px;
       border-style: hidden;
