--- a/src/sass/partials/_page.scss
+++ b/src/sass/partials/_page.scss
@@ -1,5 +1,11 @@
 .page-wrapper {
   max-width: 1000px;
-  border-radius: 4px;
   margin: auto;
+
+  .categorias {
+    margin-top: 16px;
+    margin-bottom: 16px;
+    font-size: 14px;
+    color: #333333;
+  }
 }
