--- a/src/sass/partials/_productCard.scss
+++ b/src/sass/partials/_productCard.scss
@@ -1,7 +1,6 @@
 .product-card {
   display: flex;
   flex-direction: row;
-  align-items: center;
   margin-bottom: 2px;
   position: relative;
   background-color: white;
@@ -15,6 +14,7 @@
   }
 
   .contenedor-info {
+    margin-top: 32px;
     display: inline-block;
     .producto-titulo {
       color: #333333;
