--- a/src/sass/partials/_page.scss
+++ b/src/sass/partials/_page.scss
@@ -2,6 +2,13 @@
   max-width: 1000px;
   margin: auto;
 
+  &--margin-bottom {
+    padding-bottom: 64px;
+    > .contenedor-principal {
+      box-shadow: 0px 1px 1px 1px #ccc;
+    }
+  }
+
   .categorias {
     margin-top: 16px;
     margin-bottom: 16px;
