--- a/src/sass/partials/_productDetail.scss
+++ b/src/sass/partials/_productDetail.scss
@@ -44,6 +44,11 @@
       color: white;
       border-style: hidden;
       border-radius: 4px;
+      transition: background-color 0.3s ease-in-out;
+
+      &:hover {
+        background-color: #007bff;
+      }
     }
   }
 
